# xingka_upload_dashboard

./: .gitignore  AGENTS.md  README.md  interface.md  startup.md  ui-design.md  usage.md
backend/: .env.example  brand_profiles.json  pyproject.toml
backend/app/: main.py  router.py
backend/app/api/v1/: config.py  monitor.py  router.py  scheduler.py
backend/app/core/: config.py
backend/app/services/: brand_profile_service.py  embedded_scheduler.py  global_config_service.py  overview_service.py  rpa_console.py  scheduler_engine.py  scheduler_retry_service.py
backend/tests/: test_brand_profile_api.py  test_brand_profiles.py  test_config.py  test_monitor_data.py  test_scheduler.py  test_scheduler_api.py  test_scheduler_retry_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  env.d.ts  main.ts  styles.css
frontend/src/services/: api.ts
frontend/src/stores/: monitor.ts
frontend/src/views/: DashboardView.vue
